Name: William Lai
Date: 12-31-2014
Description: Incorporated algebraic
    * StandardGame now supports reading in an algebraic movelist to setup a position (algebraic parsing still requires testing)
    * processMove now takes in bool to control animation or not

Name: William Lai
Date: 12-30-2014
Description: Upgraded Move class; documenting; algebraic
    * Move class now allows for pawn promotion field (still needs incorporation)
    * Now reads algebraic notation (still needs testing and incorporation)
    * Added crucial documentation (e.g. how squares are represented)
    * Threefold repetition currently conflicts with undo, so need to fix that
    * Would be nice if we could decouple graphics, board, and game, but might not be possible

Name: William Lai
Date: 12-29-2014
Description: Threefold repetition
    * Threefold repetition check now implemented via HashMap (so far in StandardGame only)
    * Still need testing for both 50 move rule and threefold repetition

Name: William Lai
Date: 12-27-2014
Description: Repackaging
    * Each game type now has its own package
    * Some changes to superclasses were made to accommodate this new packaging structure

Name: William Lai
Date: 12-26-2014
Description: Fixed more bugs
    * Alice Chess promotion now works as intended
    * Alice Chess now features really dumb AI
    * Highlighting of square a8 is now correct
    * Alice Chess FEN loading works

Name: William Lai
Date: 12-26-2014
Description: Alice Chess mostly working; changing ChangeLog structure
    * Alice Chess is now mostly working, but still need to check for promotion and edge cases, as well as work on AI
    * ChangeLog will no longer follow file-by-file entries, as this is a bit too restrictive
    * Fixed bugs in AliceBoard that allowed moves that left king in check
    * Merged in-progress branch into master and unpublished in-progress branch. Also set previous commit (pre-Alice Chess) as v1.0 release.

Name: Vincent Wong
Date: 01-08-2014