@@ -1,4 +1,9 @@
 Name: William Lai
+Date: 01-01-2015
+Description: Some of previous few commits applied to Losers and Alice
+    * Some of changes to code in previous three commits applied to Losers and Alice
+
+Name: William Lai
 Date: 12-31-2014
 Description: Incorporated algebraic
     * StandardGame now supports reading in an algebraic movelist to setup a position (algebraic parsing still requires testing)
